# lezgo-guessr-magicblock

./: .gitignore  Anchor.toml  Dockerfile  LICENSE  README-DOCKER.md  README.md  SUMMARY.md  build.sh  docker-compose.yml  magicblock-multiplayer-program.ts  magicblock-ranked-program.ts  note.txt
magicblock-guessr/: Cargo-no-anchor.toml  Cargo.toml  build.sh
magicblock-guessr-v1/: Cargo.toml  Cargo.toml.backup  Dockerfile  SUMMARY.md  build.sh  note.txt
magicblock-guessr-v1/scripts/: .env.programs.example  00_generate_program_id.sh  01_create_reward_mint.sh  01_set_reward_mint_authority.ts  02_deploy_multiplayer_program.sh  03_initialize_guessr_system.ts  03b_initialize_leaderboard.ts  03c_initialize_lobby_pool.ts  04_delegate_guessr_state.ts  07_test_multiplayer_room_flow.ts  08_lobby_presence_sequence.ts  09_duel_simulation.ts  11_check_delegation_status.ts  11_register_player_status.ts  _shared.ts
magicblock-guessr-v1/src/: constants.rs  error.rs  lib.rs
magicblock-guessr-v1/src/instructions/: duel.rs  er.rs  leaderboard.rs  magic_actions.rs  mod.rs  profile.rs  ranked.rs  room.rs  setup.rs
magicblock-guessr-v1/src/state/: duel.rs  leaderboard.rs  lobby.rs  mod.rs  ranked.rs  reward.rs  reward_stats.rs  room_pool.rs
scripts/: .env  .env.programs.example  01_create_reward_mint.sh  01_set_reward_mint_authority.ts  02_deploy_multiplayer_program.sh  03_initialize_guessr_system.ts  04_delegate_guessr_state.ts  05_commit_guessr_state.ts  06_set_ranked_reward_mint.ts  07_test_multiplayer_room_flow.ts  08_lobby_presence_sequence.ts  09_duel_simulation.ts  note.txt  (+1 more)
(+26 files in other folders)
