[package]
name = "guessr-multiplayer-program-v1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guessr_multiplayer_program_v1"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
